<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CCE4EF"
    tools:context=".HelpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:elevation="4dp"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        >
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_help"
            android:textSize="18dp"
            android:textStyle="bold"
            android:textColor="@color/black" />
    </androidx.appcompat.widget.Toolbar>

    <!-- 安全建议 -->
    <LinearLayout
        android:paddingTop="15dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:paddingBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_user_info_diary"
        android:paddingHorizontal="12dp"
        android:radius="8dp">

            <ImageView
                android:layout_gravity="center_horizontal"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/logo"/>



            <TextView
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_help_5"
                android:textStyle="bold"
                android:textSize="16sp"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_help_6"
            android:textSize="14sp"
            android:paddingTop="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="20dp"
            android:paddingTop="4dp"
            android:text="@string/tv_help_7"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_jump"
            android:textColor="@color/blue_click"
            android:layout_marginHorizontal="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_help_8"
            android:textSize="14sp"
            android:paddingTop="4dp"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_help_1"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_help_2"
                android:textSize="14sp"
                android:paddingTop="4dp"/>

        <TextView
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_help_3"
            android:textSize="14sp"
            android:paddingTop="4dp"/>

        <TextView
            android:layout_marginHorizontal="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_help_4"
            android:textSize="14sp"
            android:paddingTop="4dp"/>

    </LinearLayout>

</LinearLayout>