<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ForgetPasswordActivity">

    <ImageView
        android:layout_width="94dp"
        android:layout_height="86dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo2" />

    <TextView
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:gravity="center"
        android:paddingBottom="6dp"
        android:text="@string/tv_fo_1"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="@string/tv_fo_2"
        android:textColor="#666666"
        android:textSize="14sp" />



    <!-- 邮箱 -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="5dp"
        android:hint="@string/tv_fo_3"
        android:textColorHint="#C9C9C9"
        app:endIconDrawable="@drawable/baseline_email_24"
        app:endIconMode="custom">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="5dp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/tv_fo_4"
            android:textColorHint="#C9C9C9">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_verification_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:paddingEnd="100dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_get_verification_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/tv_fo_5"
            android:textColor="@color/blue_click"
            android:textSize="14sp" />


    </LinearLayout>

    <!-- 密码 -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_passwordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="5dp"
        android:hint="@string/tv_fo_6"
        android:textColorHint="#C9C9C9"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- 确认密码 -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_confirmPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginVertical="5dp"
        android:hint="@string/tv_fo_7"
        android:textColorHint="#C9C9C9"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <!-- 注册按钮 -->
    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#F44336"
        android:text="@string/tv_fo_8"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <!-- 返回登录界面 -->
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/tv_fo_9"
        android:textColor="#3F51B5"
        android:textSize="14sp"
        android:textStyle="bold" />

</LinearLayout>