<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/white"
        android:elevation="4dp"
        app:navigationIcon="@drawable/baseline_arrow_back_24">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/tv_settings_1"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:paddingVertical="10dp"
        android:background="@color/white"
        android:paddingHorizontal="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:layout_gravity="center_vertical"
            android:id="@+id/spinner_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:paddingHorizontal="25dp"
            android:id="@+id/btn_confirm"
            android:textStyle="bold"
            android:background="@drawable/send_shape"
            android:textColor="@color/white"
            android:paddingVertical="5dp"
            android:layout_gravity="end|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_se_6" />

    </FrameLayout>

    <TextView
        android:id="@+id/tv_us"
        android:background="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_settings_2"/>

</LinearLayout>
