<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LandscapeDetailActivity2">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/red"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:navigationIcon="@drawable/baseline_arrow_back_white"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        tools:layout_editor_absoluteX="-43dp">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_landscape_1"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:background="#FBFBFB"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- 景点图片 -->
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop" />

            <!-- 评分 + 景点名称 + 介绍 -->
            <androidx.cardview.widget.CardView
                android:layout_marginHorizontal="5dp"
                android:background="@drawable/bg_landscape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="12dp"
                android:elevation="4dp"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginBottom="4dp"
                        android:id="@+id/textViewScore2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4.9"
                        android:textColor="#FF5722"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_marginBottom="4dp"
                        android:id="@+id/textViewName2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="名称"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_marginBottom="4dp"
                        android:id="@+id/textViewDescription2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="介绍"
                        android:textSize="14sp"
                        android:textColor="#666666"
                        android:maxLines="10"
                        android:ellipsize="end"/>

                    <!-- 点赞 & 收藏 -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        android:paddingTop="8dp">

                        <ImageView
                            android:id="@+id/btnLike"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/seletor_like" />

                        <TextView
                            android:id="@+id/textViewPraise2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="点赞数"
                            android:textSize="14sp"
                            android:layout_marginLeft="4dp"/>

                        <ImageView
                            android:id="@+id/btnCollect"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            android:src="@drawable/selector_collect"
                            android:layout_marginLeft="16dp"/>

                        <TextView
                            android:id="@+id/textViewCollect"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_landscape_2"
                            android:textSize="14sp"
                            android:layout_marginLeft="4dp"/>
                    </LinearLayout>



                    <LinearLayout
                        android:paddingTop="5dp"
                        android:background="@color/white"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/btnSubmitScore"
                            android:textStyle="bold"
                            android:background="@drawable/send_shape"
                            android:textColor="@color/white"
                            android:paddingVertical="5dp"
                            android:paddingHorizontal="10dp"
                            android:layout_gravity="center_vertical|end"
                            android:layout_marginHorizontal="5dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/tv_landscape_4" />

                        <RatingBar
                            android:theme="@style/CustomRatingBar"
                            android:layout_marginTop="1dp"
                            android:layout_gravity="end"
                            android:layout_marginEnd="5dp"
                            android:id="@+id/ratingBar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:numStars="5"
                            android:stepSize="0.5"
                            android:rating="0"
                            android:isIndicator="false"
                            style="@style/Widget.AppCompat.RatingBar.Indicator"/>


                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_landscape"
                android:orientation="vertical"
                android:paddingHorizontal="10dp">

                <!-- 全部评论 -->
                <TextView
                    android:id="@+id/detail_comment"
                    android:layout_marginBottom="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="全部评论"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewComments"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:scrollbars="vertical" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingVertical="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/tv_diary_detail_5"
                        android:textColor="#E6E4E4" />

                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


        <LinearLayout
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <EditText
                android:id="@+id/editTextComment"
                android:layout_marginVertical="10dp"
                android:paddingHorizontal="15dp"
                android:paddingVertical="8dp"
                android:layout_marginStart="20dp"
                android:textColorHint="@color/gray"
                android:hint="@string/tv_diary_detail_3"
                android:background="@drawable/search_box"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6" />

            <TextView
                android:id="@+id/btnSubmit"
                android:textStyle="bold"
                android:background="@drawable/send_shape"
                android:textColor="@color/white"
                android:paddingVertical="5dp"
                android:layout_marginHorizontal="15dp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tv_diary_detail_4" />

        </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>